styles.css
.ReactTable .-pagination button {
  margin: 0;
}

.idyll-root {
  padding: 0;
}

body {
  overflow-x: hidden;
  overscroll-behavior-x: none;
  -webkit-overflow-scrolling: touch;
}
.parametric-article-nav {
  overflow-x: visible;
}

/* TODO FIX THIS FOR MOBILE (This is a hack) */
.idyll-scroll {
  transform: translateX(-50px);
}

.idyll-scroll-graphic > div {
  padding-top: 65px;
}

#pipeline {
  margin-left: calc(600px + 32px);
}

#pipeline .parametric-graphic-subhed {
  max-width: none;
}

#pipeline .parametric-graphic-source {
  margin-top: 0;
}

.pipeline-graphic-container {
  max-height: calc(100vh - 65px - 20px - 20px - 40px - 100px);
}

/* #pipeline .parametric-graphic > * {
  text-align: left;
} */

.packet-animated {
  animation-name: packet-animation;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

@keyframes packet-animation {
  100% { stroke-dashoffset: 0; }
}

.radio-animated {
  animation-name: radio-animation;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

@keyframes radio-animation {
  50% { stroke: #363636 }
  75% { stroke: white }
  100% { stroke: #363636 }
}

.map-tooltip {
  background: #fff;
  border: solid 1px #222;
  font-family: 'Graphik Web';
  font-size: 14px;
  line-height: 18px;
  padding: 0.5em;
  font-weight: 400;
}

.emphasized {
  font-weight: bold;
}

.terms {
  font-weight: bold;
  font-style: italic;
}

.parametric-header-metadata-component > div {
  margin-right: 2em;
}

.parametric-header-metadata-component > div > *{
  margin-right: 0.5em;
}

.large-aside-container {
  display: block;
  position: relative;
  max-width: calc(100vw - 800px);
  width: calc(100vw - 800px);
}

.large-aside-wrapper {
  position: absolute;
  left: 0;
  top: 0;
  left: 750px;
  margin-right: 75px;
}

.large-aside {
  width: 100%;
}

.large-aside .parametric-graphic-source {
  margin-top: 0;
}

.large-aside .parametric-graphic .parametric-caption {
  margin-bottom: 1em;
}

.media-picker * {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-touch-callout: none;
  cursor: default;
}

.superfund-map .parametric-graphic {
  padding-left: 0;
  padding-right: 0;
}

.superfund-map .parametric-graphic > *:not(.superfund-map) {
  text-align: right;
  margin-left: 50px;
  margin-right: 50px;
}

@media all and (max-width: 1000px) {
  .superfund-map .parametric-graphic > *:not(.superfund-map) {
    text-align: left;
    margin-left: 1em;
    margin-right: 1em;
  }

  .pipeline-graphic-container {
    max-height: calc(100vh - 65px - 20px - 20px - 100px);
  }
}

h1, h2, h3, h4, h6 {
  color: #D8FFA2;
  font-family: 'Editorial New';;
}


.idyll-scroll-text .idyll-step {
  background: #111111;
  box-shadow: none;
}

.idyll-scroll-text .idyll-step p a {
  color: #D8FFA2;
}

.idyll-scroll-text .idyll-step p {
  color: #adadad;
}
.idyll-scroll-text .idyll-step p .emphasized {
  color: #ffffff;
}
.idyll-citation {
  color: #9CBBD7;
}

.parametric-recirc-next-article {
  width: 100%;
}

.idyll-scroll-graphic > div {
  max-width: calc(100vw - 15px);
}

.idyll-root > div > img {
  margin-left: 50px;
}

@media all and (max-width: 1000px) {
  .idyll-root {
    max-width: none;
    padding: 0;
  }

  .idyll-scroll {
    transform: translateX(0);
  }

  #pipeline {
    margin-left: 0;
    margin-right: 0;
  }

  .large-aside-wrapper {
    margin-left: 0;
    margin-right: 0;
    position: static;
  }
  .idyll-root > div > img {
    margin-left: 1em;
    width: 100%;
    /* width: calc(100% - 2em); */
  }

  .idyll-scroll-graphic > div {
    padding-right: 1em;
  }
}


@media all and (max-width: 800px) {

  .idyll-root {
    max-width: none;
    padding: 0;
  }

  .large-aside-container {
    max-width: calc(100vw - 2em);
    width: calc(100vw - 2em);
  }

  .idyll-scroll-graphic > div {
    padding-right: 1em;
  }
}

@media screen and (max-width: 1000px) {
  .showLargeScreen {
    display: none;
  }
}

@media screen and (min-width: 1001px) {
  .showSmallScreen {
    display: none;
  }
}

@media (hover: none) {
  .desktopInstructions {
    display: none;
  }
  .touchscreenInstructions {
    display: inline;
  }
}

@media (hover: hover) {
  .desktopInstructions {
    display: inline;
  }
  .touchscreenInstructions {
    display: none;
  }
}

.fullWidthImage {
  margin-left: 0px !important;
}

/* TODO: let matt know about this */
.parametric-graphic-source-citation {
  line-height: inherit;
}

.parametric-header-metadata-component {
  flex-wrap: wrap;
}

.parametric-header-metadata-component > div {
  margin-bottom: 1em;
}

